--- a/index.html
+++ b/index.html
@@ -9,10 +9,48 @@
 </head>
 
 <body>
+
+    <h1>Doctor Prompter Privacy Policy for Alexa Skills</h1>
+    <hr><br>
+
+    <p>
+        This privacy policy describes how Doctor Prompter (“Doctor Prompter”, “us” or “we”) protects your (“you”,
+        “the user”) privacy and your data. Before using our Alexa Skill (“our skill”), please read this policy and the
+        Alexa Terms of Use and the Privacy Policies by the Amazon
+        Digital Services LLC (with its affiliates, “Amazon”).
+        <br><br>
+        Regarding Amazon, “Alexa” means their Alexa Voice Service which includes third party services (like our skill)
+        and other related Software.
+        <br><br>
+        If you use our skill you fully agree to this privacy policy.
+    </p>
+
     <h2>Data Collection</h2>
-    <p>Our skill collects your device ID to provide personalized content and improve our service. We use your device ID
-        to uniquely identify your device and provide a customized experience. We do not share this information with any
-        third parties, and we take appropriate measures to protect your privacy and security.
+    <p>
+        We never collect or share personal data with our skill.
+
+        To improve our services we analyze automatically how often utterances are spoken and other analytics. This is
+        done automatically by Amazon in the Amazon Developer Portal.
+
+        For our skill it is necessary to save data for you in our databases. This data is only connected to
+        your Alexa-UserId but never to your name or any other personal information. In the case of our skill we save
+        which questions and how many you answered correctly. Otherwise we could not provide you this service.
+
+    </p>
+
+    <h2>General</h2>
+    <p>
+        When you use our skills you have to talk to Alexa. This voice input is sent to Amazon and us where we use it to
+        understand what our skill should do for you. This is absolutely necessary for our service to give you an
+        appropriate answer.
+    </p>
+
+    <h2>Changes</h2>
+    <p>
+        Our skill or parts of it may change or be updated at any time. Further, this Privacy Policy might change. You
+        can find a link to this policy on the description page of the skill in the Alexa App or in the Alexa Store. Your
+        continued use of our skill after changes of the Privacy Policy or the skill itself will be seen as your
+        acceptance of both.
     </p>
 </body>
 
